--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url("./Pictures/fabrica-philip-morris-romania.avif"); /* Specifică locația imaginii */
+  background-image: url("Pictures/fabrica-philip-morris-romania.avif"); /* Specifică locația imaginii */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -158,7 +158,7 @@ body {
 /* Overlay-ul 1 */
 .overlay-1 {
   background-color: #00a2ff;
-  background-image: url("./Pictures/iqos3.png");
+  background-image: url("Pictures/iqos3.png");
   background-repeat: no-repeat;
   background-size: 127rem;
 }
