--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url("Pictures/fabrica-philip-morris-romania.avif"); /* Specifică locația imaginii */
+  background-image: url("/Pictures/fabrica-philip-morris-romania.avif"); /* Specifică locația imaginii */
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
   display: flex;
@@ -15,22 +15,20 @@ body {
 
 /* Conținutul principal */
 .main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2vh;
-  transform: translateY(-10%); /* Ajustare proporțională */
+  position: relative;
+  bottom: 350px;
+  z-index: 2; /* Ridică butoanele deasupra imaginii */
 }
 
 .main-buttons {
   display: flex;
-  gap: 2vw;
+  gap: 20px;
 }
 
 /* Stiluri generale pentru toate butoanele */
 .main-buttons button {
-  padding: 2vh 4vw;
-  font-size: 1.5rem;
+  padding: 20px 40px;
+  font-size: 18px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -103,13 +101,14 @@ body {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
   color: white;
-  display: flex; /* Secventa de mai jos modifică scrierea textului în mod orizontal */
+  display: flex; /* Secventa de mai jos modifica scrierea textului in mod orizontal */
   list-style-type: none;
   flex-wrap: wrap;
+  flex: 1 1 calc(10% - 10px);
   justify-content: center;
-  gap: 2vw;
   padding: 0;
   margin: 0;
+  gap: 20px;
 }
 
 .overlay-content span {
@@ -119,7 +118,7 @@ body {
   border-radius: 10px;
   background-color: white;
   color: #333;
-  font-size: 2rem; /* Ajustare proporțională */
+  font-size: 35px;
   transition: all 0.3s ease;
 }
 
@@ -131,7 +130,7 @@ body {
 .overlay a {
   padding: 8px;
   text-decoration: none;
-  font-size: 2rem; /* Ajustare proporțională */
+  font-size: 35px;
   font-weight: bold;
   font-style: italic;
   color: white;
@@ -159,10 +158,9 @@ body {
 /* Overlay-ul 1 */
 .overlay-1 {
   background-color: #00a2ff;
-  background-image: url("Pictures/iqos3.png");
+  background-image: url("/Pictures/iqos3.png");
   background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover; /* Pentru a adapta imaginea la dimensiuni diferite */
+  background-size: 180rem;
 }
 
 /* Overlay-ul 2 */
@@ -180,24 +178,13 @@ body {
   background-color: #c4b454;
 }
 
-/* Media Queries */
-@media screen and (max-height: 850px) {
+@media screen and (max-height: 450px) {
   .overlay a {
-    font-size: 1.5rem; /* Ajustare proporțională */
+    font-size: 20px;
   }
   .overlay .closebtn {
     font-size: 30px;
     top: 5px;
     right: 15px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .main-buttons button {
-    font-size: 1rem;
-    padding: 1vh 2vw;
-  }
-  .overlay a {
-    font-size: 1.5rem;
   }
 }
