--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ body {
   background-image: url("/Pictures/iqos3.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 
 /* Overlay-ul 2 */
